--- a/nyt-react-search/src/components/header/header.css
+++ b/nyt-react-search/src/components/header/header.css
@@ -10,7 +10,8 @@ h1 {
 }
 
 div {
-	padding-bottom: 15px;
+	padding-bottom: 5px;
+	padding-top: 5px;
 	margin: 10px 10px 10px 10px;
 	background: #e2e2e2;
 }
