--- a/nyt-react-search/src/components/header/header.css
+++ b/nyt-react-search/src/components/header/header.css
@@ -9,8 +9,8 @@ h1 {
 	font-weight: bold;
 }
 
-div {
-	padding-bottom: 5px;
+header {
+	padding-bottom: 25px;
 	padding-top: 5px;
 	margin: 10px 10px 10px 10px;
 	background: #e2e2e2;
